--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit==1.31.1
-langchain-openai==0.0.5
-langchain==0.1.4
-PyPDF2==3.0.1
-python-dotenv==1.0.0
-openai==1.12.0
-flask==2.0.1
-gunicorn==20.1.0
-flask-cors==3.0.10
-pinecone-client==2.2.1
-langchain-pinecone==0.0.2
-langchain-ollama==0.2.3  
+streamlit
+langchain-openai
+langchain
+PyPDF2
+python-dotenv
+openai
+flask
+gunicorn
+flask-cors
+pinecone-client
+langchain-pinecone
+langchain-ollama
